--- a/mysql/secret-mysql.yaml
+++ b/mysql/secret-mysql.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 data:
-  rootpassword: bat2001
+  rootpassword: YmF0MjAwMQ==
 kind: Secret
 metadata:
-  creationTimestamp: null 
+  creationTimestamp: null
   name: mysql-password
   namespace: database
