--- a/rest-api/secret-restapi.yaml
+++ b/rest-api/secret-restapi.yaml
@@ -1,8 +1,8 @@
 apiVersion: v1
 data:
-  rootpassword: bat2001
+  rootpassword: YmF0MjAwMQ==
 kind: Secret
 metadata:
   creationTimestamp: null
   name: mysql-password
-  namespace: restapi
+  namespace: rest-api
