--- a/rest-api/service-restapi.yaml
+++ b/rest-api/service-restapi.yaml
@@ -1,17 +1,15 @@
 apiVersion: v1
 kind: Service
 metadata:
-  creationTimestamp: null
+  name: rest-api
+  namespace: rest-api
   labels:
     app: rest-api
-  name: rest-api
-  namespace: rest-api 
 spec:
   ports:
-  - port: 8080
+  - name: http   # Example name for the port, can be any descriptive name
+    port: 4000
     protocol: TCP
-    targetPort: 8080
+    targetPort: 4000
   selector:
     app: rest-api
-status:
-  loadBalancer: {}
